; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/i40iw/extr_i40iw_cm.c_i40iw_cm_build_mpa_frame.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/i40iw/extr_i40iw_cm.c_i40iw_cm_build_mpa_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i40iw_cm_node = type { i32 }
%struct.i40iw_kmem_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i40iw_cm_node*, %struct.i40iw_kmem_info*, i32)* @i40iw_cm_build_mpa_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i40iw_cm_build_mpa_frame(%struct.i40iw_cm_node* %0, %struct.i40iw_kmem_info* %1, i32 %2) #0 {
  %4 = alloca %struct.i40iw_cm_node*, align 8
  %5 = alloca %struct.i40iw_kmem_info*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.i40iw_cm_node* %0, %struct.i40iw_cm_node** %4, align 8
  store %struct.i40iw_kmem_info* %1, %struct.i40iw_kmem_info** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %8 = load %struct.i40iw_cm_node*, %struct.i40iw_cm_node** %4, align 8
  %9 = getelementptr inbounds %struct.i40iw_cm_node, %struct.i40iw_cm_node* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %25 [
    i32 129, label %11
    i32 128, label %18
  ]

11:                                               ; preds = %3
  store i32 4, i32* %7, align 4
  %12 = load %struct.i40iw_cm_node*, %struct.i40iw_cm_node** %4, align 8
  %13 = load %struct.i40iw_kmem_info*, %struct.i40iw_kmem_info** %5, align 8
  %14 = getelementptr inbounds %struct.i40iw_kmem_info, %struct.i40iw_kmem_info* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @i40iw_build_mpa_v1(%struct.i40iw_cm_node* %12, i32 %15, i32 %16)
  br label %26

18:                                               ; preds = %3
  store i32 4, i32* %7, align 4
  %19 = load %struct.i40iw_cm_node*, %struct.i40iw_cm_node** %4, align 8
  %20 = load %struct.i40iw_kmem_info*, %struct.i40iw_kmem_info** %5, align 8
  %21 = getelementptr inbounds %struct.i40iw_kmem_info, %struct.i40iw_kmem_info* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @i40iw_build_mpa_v2(%struct.i40iw_cm_node* %19, i32 %22, i32 %23)
  br label %26

25:                                               ; preds = %3
  br label %26

26:                                               ; preds = %25, %18, %11
  %27 = load i32, i32* %7, align 4
  ret i32 %27
}

declare dso_local i32 @i40iw_build_mpa_v1(%struct.i40iw_cm_node*, i32, i32) #1

declare dso_local i32 @i40iw_build_mpa_v2(%struct.i40iw_cm_node*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
